# linux_C-_segment_model_desployed_by_onnxruntime

./: CMakeLists.txt  hrnet.cpp  hrnet.h  main.cpp  main1.cpp
